name:                AFRPV
version:             0.0.0.5
synopsis:            Arrowized Functional Reactive Program Visualization
description:         Arrowized Functional Reactive Program Visualization
license:             MIT
license-file:        LICENSE
author:              Felix Klein <klein@react.uni-saarland.de>
maintainer:          Felix Klein <klein@react.uni-saarland.de>
category:            FRP
stability:           alpha
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library

  build-depends:
      base >=4.7 && <4.11
    , Yampa >= 0.11 && <= 0.11
    , filepath >= 1.3.0.2
    , directory >= 1.2
    , process >= 1.2
    , array >=0.5 && <0.6

  exposed-modules:
    AFRPV.Yampa
    AFRPV.SF.Observer
    AFRPV.SF.Yampa    

  other-modules:
    AFRPV.Render.Yampa

  hs-source-dirs:
    src

  default-language:
    Haskell2010
